Polish tests to make use of @ParamterizedTest
Update tests to use @ParamterizedTest to reduce duplication.